test/parsing/ferguson/comment-test2.good
comment-test2.chpl:14: syntax error: end-of-file in comment
comment-test2.chpl:6: note: unterminated comment here
comment-test2.chpl:9: note: nested comment here
